--- a/scss/components/_carousel.scss
+++ b/scss/components/_carousel.scss
@@ -26,7 +26,6 @@
   }
   &.text-only {
     .carousel-item {
-      position: relative;
       background-color: rgba(10, 45, 80, 0.85);
       padding-top: 33.3333%;
     }
@@ -54,6 +53,10 @@
   }
   .carousel-control-prev, .carousel-control-next {
     opacity: 1;
+  }
+  // hide carousel controls on first and last slide
+  &.start .carousel-control-prev, &.finish .carousel-control-next {
+    display: none;
   }
   .carousel-control {
     background-color: rgba(10, 45, 80, 0.5);
