--- a/scss/components/_hero.scss
+++ b/scss/components/_hero.scss
@@ -4,7 +4,10 @@
 
 .hero {
   @extend .top-bar;
-  margin-bottom: $component-margin-bottom;
+  margin-bottom: $component-margin-bottom-lg;
+  img {
+    width: 100%;
+  }
   .hero-caption {
     @extend .caption-overlay;
     @media only screen and (max-width: $neo-breakpoint) {
@@ -13,9 +16,6 @@
     h2 {
       color: $white;
       margin: unset;
-    }
-    img {
-      width: 100%;
     }
   }
 }
