--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,11 +25,13 @@
 @import 'components/collapse';
 @import 'components/embed';
 @import 'components/hero';
+@import 'components/images';
 @import 'components/infobox';
 @import 'components/modal';
 @import 'components/quotation';
 @import 'components/table';
 @import 'components/timeline';
+@import 'components/viewanswer';
 
 @import 'pages/forum';
 @import 'pages/home';
