--- a/scss/pages/_quiz.scss
+++ b/scss/pages/_quiz.scss
@@ -47,15 +47,6 @@
     text-align: left;
     div {
       margin-left: unset;
-      input[type="submit"]:first-child {
-        @extend .btn, .btn-primary;
-        margin-left: unset;
-      }
-    }
-  }
-  .continuebutton {
-    input[type="submit"]:first-child {
-      @extend .btn, .btn-primary;
     }
   }
 }
@@ -89,9 +80,6 @@
     .mod_quiz-prev-nav.btn.btn-secondary {
       @extend .btn, .btn-secondary;
     }
-    .mod_quiz-next-nav.btn.btn-primary {
-      @extend .btn, .btn-primary;
-    }
   }
 }
 // quiz navigation block
@@ -99,11 +87,11 @@
   a.qnbutton {
     height: 1.25rem;
     width: 1.25rem;
-    font-size: 1rem;
-    padding: unset;
+    font-size: 1rem !important;
+    padding: unset !important;
     margin: 0 0.625rem 0.625rem 0;
     background-color: $pearl-grey !important;
-    color: $black;
+    color: $headings !important;
     span.thispageholder {
       border: unset;
     }
@@ -158,14 +146,11 @@
   }
 }
 
-#page-mod-quiz-summary {
-  .controls .singlebutton input[type="submit"]:first-child {
-    @extend .btn, .btn-primary;
-  }
-} 
-
-.que.deferredfeedback, .que.manualgraded {
+// quiz question
+.que {
+  margin: 0 0 $component-margin-bottom-lg;
   .info {
+    margin-bottom: $component-margin-bottom;
     background-color: unset;
     padding: unset;
     border: unset;
@@ -174,17 +159,19 @@
     }.no, .qno {
       @extend .h5;
     }
-    div.state, div.grade {
+    div {
+      margin: 0 $component-margin-bottom-xs 0 0;
       line-height: normal;
-      padding: 0.375rem;
       font-size: 1rem;
+      padding: 0.375rem;
+      margin: 0 $component-margin-bottom-xs 0 0;
+    }
+    div.state, div.grade {
       font-family: 'KingsBureauGrot';
       border-radius: 0.125rem;
-      margin: unset;
-      margin-right: 0.5rem;
     }
     div.state {
-      background-color: #01b9e1;
+      background-color: $sky-blue;
       text-transform: uppercase;
       color: $white;
     }
@@ -193,7 +180,6 @@
       color: $headings;
     }
     .questionflag.editable {
-      line-height: normal;
       font-family: 'KingsBureauGrotFiveOne';
       .questionflagimage {
         display: none;
@@ -206,25 +192,36 @@
       }
     }
   }
-// quiz feedback box
+  // quiz question and feedback box
   .content {
     .formulation {
       background-color: unset;
-      margin-top: 1rem;
+      margin: unset;
       padding: unset;
-      .qtext b {
-        font-family: 'KingsBureauGrot';
-        font-size: 1.25rem;
-        line-height: 1.4;
+      .qtext {
+        margin-bottom: $component-margin-bottom;
+        p {
+          margin-bottom: $component-margin-bottom-sm;
+       }
       }
       .ablock {
+        margin: unset;
         .prompt, .readonly, .readonly p {
-          font-family: 'KingsBureauGrotFiveOne';
+          margin-bottom: $component-margin-bottom-sm;
         }
         .answer {
-          font-family: 'KingsBureauGrot';
-          .r0, .r1 {
+          padding: unset !important;
+          margin-bottom: $component-margin-bottom-xs !important;
+          label {
             margin-bottom: unset;
+          }
+          input[type="text"] {
+            margin-left: $component-margin-bottom-xs; 
+          }
+          .r0, .r1 {
+            padding-top: unset;
+            padding-bottom: unset;
+            margin-bottom: $component-margin-bottom-xs !important;
             label {
               font-size: 1rem;
             }
@@ -239,6 +236,9 @@
             background-color: rgba(226,35,26,0.2) !important;
           }
         }
+      }
+      input[type="submit"].btn {
+        @extend .btn-primary;
       }
     }
     .outcome {
@@ -280,6 +280,16 @@
       content: '\f057';
       padding: 0 4px;
     }
+  }
+}
+
+// submit button
+#page-mod-quiz-attempt, #page-mod-quiz-review {
+  .submitbtns {
+    padding: unset;
+  }
+  .mod_quiz-next-nav {
+    margin-bottom: $component-margin-bottom-xl;
   }
 }
 
