--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -10,9 +10,10 @@
   flex-direction: unset;
   border: unset;
   margin-bottom: $component-margin-bottom;
-//  @extend .top-bar;
-  .card-img-top, .card-img-left {
+  .card-img-top, .card-img-left, .img-top, .img-left {
     width: 310px;
+    height: 100%;
+    flex-shrink: 0;
     @extend .top-bar; 
     border-radius: unset; 
     @media only screen and (max-width: $neo-breakpoint) {
@@ -23,6 +24,7 @@
     background-color: $block-background;
     h4 {
       margin-top: unset;
+      margin-bottom: 0.75rem;
     }
   }
 }
@@ -40,8 +42,9 @@
     &:last-child {
       margin-right: unset;
     }
-    .card-img-top, .card-img-left {
+    .card-img-top, .card-img-left, .img-top, .img-left {
       width: 100%;
+      height: auto;
     }
   }
 }
@@ -49,12 +52,17 @@
 .float-box {
   display: flex;
   margin-bottom: $component-margin-bottom;
+  img {
+    height: 100%;
+    flex-shrink: 0;
+  }
   img, .img-left {
     margin: unset;
     margin-right: 1rem;
   }
   .img-right {
     margin-left: 1rem;
+    order: 2;
   }
   @media only screen and (max-width: $neo-breakpoint) {
     display: block;
@@ -62,10 +70,14 @@
       margin-right: unset;
       margin-bottom: 1rem;
       width: 100%;
-      height: auto;
     }
     .img-right {
       margin-left: unset;
+    }
+  }
+  .float-box-body {
+    h4 {
+      margin-bottom: 0.75rem;
     }
   }
 }
