--- a/scss/components/_infobox.scss
+++ b/scss/components/_infobox.scss
@@ -57,18 +57,18 @@
 }
 
 //learning outcome box
-.learning-outcome-box {
+#region-main .learning-outcome-box {
   @extend .info-box;
   background-color: #edf1f2;
   & > :first-child::before {
     content: '\f091';
     color: $teal-blue;
-    padding: 0 4px;
+    padding: 4px;
   }
   ol, ul {
     margin: 0 0 0 1.25rem;
     li:last-child {
-      margin-bottom: unset;
+      margin-bottom: 0;
     }
   }
 }
