--- a/scss/layout/_sidebar.scss
+++ b/scss/layout/_sidebar.scss
@@ -15,21 +15,24 @@
     background-color: $block-header;
     padding: 0.5rem 0.75rem !important;
     height: auto;
-    margin: unset;
-    box-shadow: unset;
+    margin: 0;
+    box-shadow: none;
     &.block_course_discuss_header_section {
       border: 1px solid $table-border;
-      border-bottom: unset;
+      border-bottom: 0;
       .headline {
         @extend .sidebar-header;
       }
     }
     .title {
       position: relative;
-      padding: unset;
+      padding: 0;
+      background: transparent;
+      box-shadow: none;
       h2 {
-        line-height: 1.4;
-        color: $midnight-blue;
+        @extend .sidebar-header;
+//        line-height: 1.4;
+//        color: $midnight-blue;
         pointer-events: none;
       }
       // hide block action buttons
@@ -40,21 +43,44 @@
   }
   .content {
      background-color: $block-background;
-     padding: 1.125rem;
-     li {
-       font-family: 'KingsBureauGrotFiveOne';
-       margin: unset;
-       a, p, span {
-         font-family: 'KingsBureauGrotFiveOne';
-         color: $midnight-blue;
-         font-size: 1rem;
-         line-height: 1.5;
-         margin: unset;
+     padding: $component-margin;
+     ul {
+       &.fa-ul {
+         margin: 0 0 0 2rem;
+         .fa-li {
+           top: 0;
+           left: -2.25rem;
+         }
        }
-       strong, a:hover, p:hover {
-         color: $link-hover;
+       li {
+         font-family: 'KingsBureauGrotFiveOne';
+         margin: 0;
+         a, p, span {
+           font-family: 'KingsBureauGrotFiveOne';
+           color: $midnight-blue;
+           font-size: 1rem;
+           line-height: 1.5;
+           margin: 0;
+         }
+         strong, a:hover, p:hover {
+           color: $link-hover;
+         }
        }
      }
+  }
+  // book table of contents current page
+  &.block_book_toc {
+    .content {
+      li {
+        &:not(:last-child) {
+          margin-bottom: 0.75rem;
+        }
+        strong {
+          font-family: 'KingsBureauGrot';
+          color: $midnight-blue;
+        }
+      }
+    }
   }
 }
 
@@ -62,15 +88,15 @@
 #block_course_discuss_posts_container {
   padding: 0.75rem;
   #block_course_discuss_reply_container {
-    margin-top: unset;
-    padding-top: unset;
+    margin-top: 0;
+    padding-top: 0;
     #block_course_discuss_form_message {
       border: 1px solid $table-border;
-      border-top: unset;
+      border-top: 0;
       padding: 0.75rem;
       font-family: 'KingsBureauGrotFiveOne';
       font-size: 1rem;
-      margin-bottom: unset;
+      margin-bottom: 0;
     }
     #block_course_discuss_form_message_feedback {
       margin-top: 0.5rem;
@@ -81,12 +107,27 @@
       color: $body-text;
     }
     .btn.course-discuss-reply-button {
-      margin-left: unset;
+      margin-left: 0;
     }
   }
 }
 
-// book table of contents current page
-.block_book_toc .content li strong {
-  font-family: 'KingsBureauGrot';
+// module academic team html block
+#block-region-side-post .block_html .content ul.module-academic-team {
+  margin: 0;
+  list-style: none;
+  li {
+    span {
+      display: block;
+    }
+    &:not(:last-child) {
+      margin-bottom: $component-margin-bottom-sm;
+    }
+  }    
 }
+
+//quick access block
+#block-region-side-post .block_html .content ul.fa-ul {
+  color: $midnight-blue;
+}
+
