--- a/scss/base/_typography.scss
+++ b/scss/base/_typography.scss
@@ -2,23 +2,6 @@
 // typography
 // -----------------------------------------------------------------------------
 
-html, body {
-  font-size: 16px;
-  color: $body-text;
-}
-h1, h2, h3, h4, h5, h6,
-.h1, .h2, .h3, .h4, .h5, .h6,
-.quote-attribution {
-  font-family: 'KingsBureauGrot';
-  color: $headings;
-  margin-top: unset;
-  margin-bottom: $component-margin-bottom;
-}
-body, select, option {
-//  font-family: 'KingsBureauGrotFiveOne';
-  font-family: 'Open Sans', sans-serif;
-}
-
 $font-kbg: (
   family: 'KingsBureauGrot',
   h1: ( font-size: 2.375rem, line-height: 1.1 ),
@@ -73,67 +56,122 @@ $line-height:$font-size) {
   }
 }
 
-h1, .h1 { @include font-scale(h1) ;}
-h2, .h2 { @include font-scale(h2) ;}
-h3, .h3 { @include font-scale(h3) ;}
-h4, .h4 { @include font-scale(h4) ;}
-h5, .h5 { @include font-scale(h5) ;}
-h6, .h6 { @include font-scale(h6) ;}
-p {
-  @include font-scale(p, $font-os);
-  margin-bottom: $component-margin-bottom;
-  color: $body-text;
-}
-.caption {
-  @include font-scale(caption, $font-os);
-}
-.quote-body {
-  @include font-scale(quote-body, $font-kcd);
-  margin-bottom: 1.75rem;
-  font-style: italic;
-}
-.quote-attribution {
-  @include font-scale(quote-attribution);
-  margin-bottom: 0;
-}
-
 .sidebar-header {
-  padding: unset;
-  margin: unset;
+  padding: 0;
+  margin: 0;
   color: $midnight-blue;
   font-family: 'KingsBureauGrot' !important;
   font-size: 1.125rem;
   line-height: 1.4;
 }
 
-// mobile fonts
-@media only screen and (max-width: 767px) {
-  h1, .h1 { @include font-scale(h1-sm) ;}
-  h2, .h2 { @include font-scale(h2-sm) ;}
-  h3, .h3 { @include font-scale(h3-sm) ;}
-  h4, .h4 { @include font-scale(h4-sm) ;}
-  h5, .h5, h6, .h6 { @include font-scale(h56-sm) ;}
-  .quote-body { @include font-scale(quote-body-sm, $font-kcd); }
-  .quote-attribution { @include font-scale(quote-attribution-sm); }
+html, body {
+  font-size: 16px;
+  color: $body-text;
 }
 
-// hide page title underline
-.path-mod-book .generalbox.book_content>h3 {
-  background: unset;
-  &:after {
-    display: none;
+  h1, h2, h3, h4, h5, h6,
+  .h1, .h2, .h3, .h4, .h5, .h6,
+  .quote-attribution {
+    font-family: 'KingsBureauGrot';
+    color: $headings;
+    margin-top: 0;
+    margin-bottom: $component-margin-bottom;
   }
-}
+  h1, .h1 { @include font-scale(h1) ;}
+  h2, .h2 { @include font-scale(h2) ;}
+  h3, .h3 { @include font-scale(h3) ;}
+  h4, .h4 { @include font-scale(h4) ;}
+  h5, .h5 { @include font-scale(h5) ;}
+  h6, .h6 { @include font-scale(h6) ;}
 
-//override theme list font style
-li {
-  line-height: inherit;
   p {
-    margin-bottom: unset;
+    @include font-scale(p, $font-os);
+    margin-bottom: $component-margin-bottom;
+    color: $body-text;
   }
-}
+  .caption {
+    @include font-scale(caption, $font-os);
+  }
+  .quote-body {
+    @include font-scale(quote-body, $font-kcd);
+    margin-bottom: 1.75rem;
+    font-style: italic;
+  }
+  .quote-attribution {
+    @include font-scale(quote-attribution);
+    margin-bottom: 0;
+  }
+  select, option, {
+    font-family: 'Open Sans', sans-serif;
+  }
 
-//override book headings
+  // mobile fonts
+  @media only screen and (max-width: 767px) {
+    h1, .h1 { @include font-scale(h1-sm) ;}
+    h2, .h2 { @include font-scale(h2-sm) ;}
+    h3, .h3 { @include font-scale(h3-sm) ;}
+    h4, .h4 { @include font-scale(h4-sm) ;}
+    h5, .h5, h6, .h6 { @include font-scale(h56-sm) ;}
+    .quote-body { @include font-scale(quote-body-sm, $font-kcd); }
+    .quote-attribution { @include font-scale(quote-attribution-sm); }
+  }
+
+  // hide page title underline
+  .path-mod-book .generalbox.book_content>h3 {
+    background: none;
+    &:after {
+      display: none;
+    }
+  }
+
+  //override theme list font style
+  li {
+    line-height: inherit;
+    & > p {
+      margin-bottom: 0;
+    }
+  }
+
+
+  //override module week page link
+  .instancename {
+    color: $midnight-blue;
+    &:hover {
+      color: #003d5c;
+    }
+  }
+
+  #region-main {
+    // link hover styles
+    p a, li p a {
+      text-decoration: underline;
+      color: $reflex-blue;
+      &:hover {
+        color: $sea-blue;
+      }
+      &:visited {
+        color: $midnight-blue;
+      }
+    }
+    // list margin bottom
+    ol, ul {
+      margin: 0 0 $component-margin-bottom 26px;
+      &> li {
+        margin-bottom: $component-margin-bottom-sm;
+        // remove margin bottom from nested lists
+        ul, ol, li {
+          margin-bottom: 0;
+        }
+      }
+    }
+  }
+
+  pre {
+    margin-bottom: $component-margin-bottom;
+  }
+
+ //override book headings
 .path-mod-book {
   #region-main > div:first-of-type > h2:first-of-type {
     @extend .h1;
@@ -144,26 +182,44 @@ li {
   }
 }
 
-//override module week page link
-.instancename {
-  color: $midnight-blue;
-  &:hover {
-    color: #003d5c;
+// and page headings
+.path-mod-page #region-main>div>h2 {
+  background: none;
+  &::after {
+    display: none;
   }
 }
 
-#region-main {
-  p a, li p a {
-    text-decoration: underline;
-    color: $reflex-blue;
-    &:hover {
-      color: $sea-blue;
+// font-size is overridden so reset to 14px to keep the navbar and footer
+// the same as kcl.ac.uk
+header.navbar {
+  font-size: 14px;
+  .container-fluid {
+    padding: 0;
+  }
+  form#search {
+    button {
+      font-family: 'Open Sans',sans-serif;
+      font-size: 1.08rem !important;
+      padding: 6px 18px !important; 
     }
-    &:visited {
-      color: $midnight-blue;
+    &:hover input#coursesearchbox {
+      font-size: 13.65px !important;
     }
   }
-  li:last-child {
-    margin-bottom: $component-margin-bottom;
+}
+footer#page-footer {
+  font-size: 14px;
+  p {
+    color: $white;
+    font-size: 14px;
+    line-height: 15px;
+    margin-bottom: 10px;  
+  }
+}
+.back-to-top {
+  bottom: 28px;
+  .fa-3x {
+    font-size: 42px;
   }
 }
