--- a/scss/components/_table.scss
+++ b/scss/components/_table.scss
@@ -7,24 +7,27 @@
 table, .table {
   margin-bottom: $component-margin-bottom;
   border-collapse: separate;
-  border-spacing: unset;
-  border-radius: unset;
+  border-spacing: 0;
+  border-radius: 0;
   &.table-bordered {
-    border: unset;
+    border: none;
     border-right: 1px solid $table-border;
     border-bottom: 1px solid $table-border;
-    border-radius: unset;
+    border-radius: 0;
     th, td {
       border-top: 1px solid $table-border !important;
       border-left: 1px solid $table-border;
     }
   }
   &.default-width {
-    width: unset;
+    width: auto;
   }
   th, td {
     padding: 0.75rem 1.25rem;
-    border-radius: unset !important;
+    border-radius: 0 !important;
+    &.border-left-none {
+      border-left: 0 !important;
+    }
   }
   thead th, th {
     background-color: $block-background;
@@ -32,12 +35,18 @@ table, .table {
     font-size: 1.125rem;
     line-height: 1.4;
     color: $headings;
-    border-radius: unset !important;
+    border-radius: 0 !important;
     vertical-align: top;
   }
   td {
     line-height: 1.375;
     color: $body-text;
+  }
+  tr.border-none td, tr.border-none th {
+    border-top: 0 !important;
+    &:not(:first-child) {
+      border-left: 0;
+    }
   }
   &.vertical-align-middle {
     th, td {
